--- a/index.html
+++ b/index.html
@@ -182,63 +182,48 @@
 							<div class="items style1 medium onscroll-fade-in">
 								<section><div class="inner">
 									<span class="icon style2 major fa-gem"></span>
-									<h3>Lorem</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Văn Hoá Việt</h3>
+									<p>Tổng hòa những giá trị tinh thần, di sản quý báu của dân tộc Việt Nam. Hồn cốt và niềm tự hào của mỗi người con đất Việt.</p>
 								</div></section>
 								<section><div class="inner">
 									<span class="icon solid style2 major fa-save"></span>
-									<h3>Ipsum</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Sử Việt</h3>
+									<p>Những câu chuyện lịch sử hào hùng, những trang sử Việt vẻ vang của dân tộc. Bồi đắp lòng yêu nước và tự hào dân tộc Việt.</p>
 								</div></section>
 								<section><div class="inner">
 									<span class="icon solid style2 major fa-chart-bar"></span>
-									<h3>Dolor</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Ẩm Thực Việt</h3>
+									<p>Thế giới hương vị phong phú, tinh tế qua từng món ăn Việt, từ phở truyền thống đến ẩm thực đường phố. Hồn cốt ẩm thực Việt.</p>
 								</div></section>
 								<section><div class="inner">
 									<span class="icon solid style2 major fa-wifi"></span>
-									<h3>Amet</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Lễ Hội Việt</h3>
+									<p>Không khí tưng bừng của những lễ hội truyền thống Việt, mang đậm màu sắc văn hóa. Kết nối cộng đồng và tình người Việt.</p>
 								</div></section>
 								<section><div class="inner">
 									<span class="icon solid style2 major fa-cog"></span>
-									<h3>Magna</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Trang Phục Việt</h3>
+									<p>Nét đẹp của tà áo dài Việt và các trang phục dân tộc, từ truyền thống đến hiện đại. Tự hào về bản sắc và tinh thần Việt.</p>
 								</div></section>
 								<section><div class="inner">
 									<span class="icon style2 major fa-paper-plane"></span>
-									<h3>Tempus</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Tôn Giáo Tín Ngưỡng</h3>
+									<p>Khám phá sự đa dạng của đời sống tâm linh người Việt, từ tục thờ cúng tổ tiên đến các tôn giáo lớn. Nét đẹp tâm hồn Việt.</p>
 								</div></section>
 								<section><div class="inner">
 									<span class="icon solid style2 major fa-desktop"></span>
-									<h3>Aliquam</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Phong Tục Dân Gian</h3>
+									<p>Hành trình khám phá nét đẹp qua những phong tục, tập quán tốt đẹp của người Việt. Giữ gìn bản sắc và bản lĩnh Việt qua bao đời.</p>
 								</div></section>
 								<section><div class="inner">
 									<span class="icon solid style2 major fa-sync-alt"></span>
-									<h3>Elit</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Làng Nghề Truyền Thống</h3>
+									<p>Tìm hiểu về các làng nghề thủ công nổi tiếng, nơi lưu giữ tinh hoa của người Việt. Gìn giữ nét đẹp văn hóa, tôn vinh giá trị lao động Việt.</p>
 								</div></section>
 								<section><div class="inner">
 									<span class="icon solid style2 major fa-hashtag"></span>
-									<h3>Morbi</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</div></section>
-								<section><div class="inner">
-									<span class="icon solid style2 major fa-bolt"></span>
-									<h3>Turpis</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</div></section>
-								<section><div class="inner">
-									<span class="icon solid style2 major fa-envelope"></span>
-									<h3>Ultrices</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</div></section>
-								<section><div class="inner">
-									<span class="icon solid style2 major fa-leaf"></span>
-									<h3>Risus</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Cẩm Nang Du Lịch</h3>
+									<p>Khám phá những điểm đến hấp dẫn tại Việt Nam, những bí quyết du lịch độc đáo. Tận hưởng mỗi chuyến đi trên dải đất hình chữ S.</p>
 								</div></section>
 							</div>
 						</div>
@@ -297,5 +282,6 @@
 
 	</body>
 </html>
+
 
 
