--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 									<p>Những câu chuyện lịch sử hào hùng, những trang sử Việt vẻ vang của dân tộc. Bồi đắp lòng yêu nước và tự hào dân tộc Việt.</p>
 								</div></section>
 								<section><div class="inner">
-									<span class="icon solid style2 major fa-chart-bar"></span>
+									<span class="icon solid style2 major fa-utensils"></span>
 									<h3>Ẩm Thực Việt</h3>
 									<p>Thế giới hương vị phong phú, tinh tế qua từng món ăn Việt, từ phở truyền thống đến ẩm thực đường phố. Hồn cốt ẩm thực Việt.</p>
 								</div></section>
@@ -282,6 +282,7 @@
 
 	</body>
 </html>
+
 
 
 
