--- a/index.html
+++ b/index.html
@@ -196,17 +196,17 @@
 									<p>Thế giới hương vị phong phú, tinh tế qua từng món ăn Việt, từ phở truyền thống đến ẩm thực đường phố. Hồn cốt ẩm thực Việt.</p>
 								</div></section>
 								<section><div class="inner">
-									<span class="icon solid style2 major fa-wifi"></span>
+									<span class="icon solid style2 major fa-ticket"></span>
 									<h3>Lễ Hội Việt</h3>
 									<p>Không khí tưng bừng của những lễ hội truyền thống Việt, mang đậm màu sắc văn hóa. Kết nối cộng đồng và tình người Việt.</p>
 								</div></section>
 								<section><div class="inner">
-									<span class="icon solid style2 major fa-cog"></span>
+									<span class="icon solid style2 major fa-vest"></span>
 									<h3>Trang Phục Việt</h3>
 									<p>Nét đẹp của tà áo dài Việt và các trang phục dân tộc, từ truyền thống đến hiện đại. Tự hào về bản sắc và tinh thần Việt.</p>
 								</div></section>
 								<section><div class="inner">
-									<span class="icon style2 major fa-paper-plane"></span>
+									<span class="icon style2 major fa-place-of-worship"></span>
 									<h3>Tôn Giáo Tín Ngưỡng</h3>
 									<p>Khám phá sự đa dạng của đời sống tâm linh người Việt, từ tục thờ cúng tổ tiên đến các tôn giáo lớn. Nét đẹp tâm hồn Việt.</p>
 								</div></section>
@@ -216,12 +216,12 @@
 									<p>Hành trình khám phá nét đẹp qua những phong tục, tập quán tốt đẹp của người Việt. Giữ gìn bản sắc và bản lĩnh Việt qua bao đời.</p>
 								</div></section>
 								<section><div class="inner">
-									<span class="icon solid style2 major fa-sync-alt"></span>
+									<span class="icon solid style2 major fa-hammer"></span>
 									<h3>Làng Nghề Truyền Thống</h3>
 									<p>Tìm hiểu về các làng nghề thủ công nổi tiếng, nơi lưu giữ tinh hoa của người Việt. Gìn giữ nét đẹp văn hóa, tôn vinh giá trị lao động Việt.</p>
 								</div></section>
 								<section><div class="inner">
-									<span class="icon solid style2 major fa-hashtag"></span>
+									<span class="icon solid style2 major fa-book-open"></span>
 									<h3>Cẩm Nang Du Lịch</h3>
 									<p>Khám phá những điểm đến hấp dẫn tại Việt Nam, những bí quyết du lịch độc đáo. Tận hưởng mỗi chuyến đi trên dải đất hình chữ S.</p>
 								</div></section>
@@ -282,6 +282,7 @@
 
 	</body>
 </html>
+
 
 
 
