--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 				<!-- Welcome Banner -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
-						<div class="content">
+						<div class="content" id="banner">
 							<h1>Blog Văn Hoá Việt</h1>
 							<p style="text-align: justify;">Chào bạn, Lazi Voyage là blog để bạn khám phá <a href="https://lazivoyage.blogspot.com">văn hoá Việt</a> và <a href="https://lazivoyage.wordpress.com">du lịch Việt Nam</a> qua những câu chuyện và trải nghiệm đầy cảm hứng..</p>
 							<ul class="actions stacked">
@@ -34,7 +34,7 @@
 				
 				<!-- Vườn ngôn ngữ việt -->
 					<section class="wrapper style1 align-center">
-						<div class="inner">
+						<div class="inner" id="lang">
 							<h2>Vườn Ngôn Ngữ Việt</h2>
 							<p style="text-align: justify;">Một trong những điểm thú vị nhất của tour xuyên Việt chính là được khám phá sự đa dạng của tiếng Việt. Ngôn ngữ Việt Nam vốn đã hàm chứa đa tầng ý nghĩa, thêm vào đó tùy từng ngữ cảnh, phong cách, thái độ, tính cách của người sử dụng mà ý nghĩa của câu nói càng trở nên thâm thúy hơn. <em>Phong ba bão táp không bằng ngữ pháp Việt Nam!</em> Hãy cùng xem dân Việt 3 miền chơi chữ, nói lái <em>đỉnh</em> thế nào nhé</p>
 						</div>
@@ -113,7 +113,7 @@
 							<h2>Tour Xuyên Việt</h2>
 							<p style="text-align: justify;">Việc rút gọn bộ máy hành chính từ 63 xuống 34 tỉnh thành đã khiến việc du lịch xuyên Việt trở nên dễ dàng hơn bao giờ hết. Bạn đã sẵn sàng cho tour xuyên việt chưa?</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Xem thêm</a></li>
+								<li><a href="#banner" class="button smooth-scroll-middle">Xem thêm</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -206,7 +206,7 @@
 									<p>Nét đẹp của tà áo dài Việt và các trang phục dân tộc, từ truyền thống đến hiện đại. Tự hào về bản sắc và tinh thần Việt.</p>
 								</div></section>
 								<section><div class="inner">
-									<span class="icon style2 major fa-place-of-worship"></span>
+									<span class="icon style2 major fa-yin-yang"></span>
 									<h3>Tôn Giáo Tín Ngưỡng</h3>
 									<p>Khám phá sự đa dạng của đời sống tâm linh người Việt, từ tục thờ cúng tổ tiên đến các tôn giáo lớn. Nét đẹp tâm hồn Việt.</p>
 								</div></section>
@@ -282,6 +282,7 @@
 
 	</body>
 </html>
+
 
 
 
