--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 				<!-- Tour Vietnam -->
 					<section class="spotlight style5 orient-left content-align-left image-position-center onscroll-image-fade-in">
-						<div class="content">
+						<div class="content" id="tour">
 							<h2>Tour Xuyên Việt</h2>
 							<p style="text-align: justify;">Việc rút gọn bộ máy hành chính từ 63 xuống 34 tỉnh thành đã khiến việc du lịch xuyên Việt trở nên dễ dàng hơn bao giờ hết. Bạn đã sẵn sàng cho tour xuyên việt chưa?</p>
 							<ul class="actions stacked">
@@ -176,7 +176,7 @@
 
 					<!-- Góc văn hoá việt -->
 					<section class="wrapper style1 align-center">
-						<div class="inner">
+						<div class="inner" id="culture">
 							<h2>Góc Văn Hoá việt</h2>
 							<p style="text-align: justify;">Góc Văn hoá Việt là nơi bạn khám phá chiều sâu của văn hoá Việt qua những câu chuyện, phong tục và nét đẹp truyền thống. Từ kho tàng sử Việt hào hùng đến những khía cạnh tinh tế của cuộc sống Việt đương đại, chúng tôi mời bạn cùng tìm hiểu để thêm yêu và tự hào về bản sắc dân tộc.</p>
 							<div class="items style1 medium onscroll-fade-in">
@@ -206,7 +206,7 @@
 									<p>Nét đẹp của tà áo dài Việt và các trang phục dân tộc, từ truyền thống đến hiện đại. Tự hào về bản sắc và tinh thần Việt.</p>
 								</div></section>
 								<section><div class="inner">
-									<span class="icon style2 major fa-yin-yang"></span>
+									<span class="icon solid style2 major fa-yin-yang"></span>
 									<h3>Tôn Giáo Tín Ngưỡng</h3>
 									<p>Khám phá sự đa dạng của đời sống tâm linh người Việt, từ tục thờ cúng tổ tiên đến các tôn giáo lớn. Nét đẹp tâm hồn Việt.</p>
 								</div></section>
@@ -231,7 +231,7 @@
 				
 				<!-- Contact -->
 					<section class="wrapper style1 align-center">
-						<div class="inner medium">
+						<div class="inner medium" id="contact">
 							<h2>Thông tin liên hệ</h2>
 							<form method="post" action="#">
 								<div class="fields">
@@ -282,6 +282,7 @@
 
 	</body>
 </html>
+
 
 
 
