--- a/index.html
+++ b/index.html
@@ -15,6 +15,28 @@
 	</head>
 	<body class="is-preload">
 
+				<!-- Header -->
+				<header class="sticky-header">
+				  <div class="logo">
+				    <a href="/"><img src="logo.png" alt="Lazivoyage"></a>
+				  </div>
+				  <nav class="desktop-menu">
+				    <ul>
+				      <li><a href="/">Home</a></li>
+				      <li><a href="/destinations">Destinations</a></li>
+				      <li><a href="/blog">Blog</a></li>
+				      <li><a href="/about">About</a></li>
+				    </ul>
+				  </nav>
+				  <div class="search-bar">
+				    <input type="text" placeholder="Search...">
+				    <button><i class="fas fa-search"></i></button>
+				  </div>
+				  <div class="mobile-menu">
+				    <button class="hamburger">☰</button>
+				  </div>
+				</header>
+		
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
@@ -257,17 +279,17 @@
 					</section>
 
 				<!-- Footer -->
-					<footer class="wrapper style1 align-center">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
-							</ul>
-							<p>Design: <a href="https://aldahub.com">Alda Hub</a>.</p>
-						</div>
+					<footer class="minimalist-footer">
+					  <img src="logo.png" alt="Lazi Voyage" class="footer-logo">
+					  <p>Khám phá vẻ đẹp văn hóa Việt</p>
+					  
+					  <div class="social-circle">
+					    <a href="#"><i class="fab fa-instagram"></i></a>
+					    <a href="#"><i class="fab fa-pinterest"></i></a>
+					    <a href="#"><i class="fab fa-youtube"></i></a>
+					  </div>
+					  
+					  <div class="copyright">© 2023 Lazi Voyage</div>
 					</footer>
 			</div>
 
@@ -282,10 +304,3 @@
 
 	</body>
 </html>
-
-
-
-
-
-
-
