--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<!-- Header -->
 				<header class="sticky-header">
 				  <div class="logo">
-				    <a href="/"><img src="logo.png" alt="Lazivoyage"></a>
+				    <a href="/"><img src="images/lazi-voyage/logo-lazi-update.png" alt="Lazivoyage"></a>
 				  </div>
 				  <nav class="desktop-menu">
 				    <ul>
@@ -280,7 +280,7 @@
 
 				<!-- Footer -->
 					<footer class="minimalist-footer">
-					  <img src="logo.png" alt="Lazi Voyage" class="footer-logo">
+					  <img src="images/lazi-voyage/logo-lazi-update.png" alt="Lazi Voyage" class="footer-logo">
 					  <p>Khám phá vẻ đẹp văn hóa Việt</p>
 					  
 					  <div class="social-circle">
@@ -304,3 +304,4 @@
 
 	</body>
 </html>
+
