--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
 	</head>
 	<body class="is-preload">
 
-				<!-- Header -->
-				<header class="sticky-header">
-				  <div class="logo">
-				    <a href="/"><img src="images/lazi-voyage/logo-lazi-update.png" alt="Lazivoyage"></a>
-				  </div>
-				  <nav class="desktop-menu">
-				    <ul>
-				      <li><a href="/">Home</a></li>
-				      <li><a href="/destinations">Destinations</a></li>
-				      <li><a href="/blog">Blog</a></li>
-				      <li><a href="/about">About</a></li>
-				    </ul>
-				  </nav>
-				  <div class="search-bar">
-				    <input type="text" placeholder="Search...">
-				    <button><i class="fas fa-search"></i></button>
-				  </div>
-				  <div class="mobile-menu">
-				    <button class="hamburger">☰</button>
-				  </div>
-				</header>
+					<!-- Header -->
+					<header class="sticky-header">
+					  <div class="logo">
+					    <a href="/"><img src="images/lazi-voyage/logo-lazi-update.png" alt="Lazivoyage"></a>
+					  </div>
+					  <nav class="desktop-menu">
+					    <ul>
+					      <li><a href="/">Home</a></li>
+					      <li><a href="#lang">Ngôn Ngữ</a></li>
+					      <li><a href="#tour">Tour</a></li>
+					      <li><a href="#culture">Văn Hoá</a></li>
+					    </ul>
+					  </nav>
+					  <div class="search-bar">
+					    <input type="text" placeholder="Tìm kiếm...">
+					    <button><i class="fas fa-search"></i></button>
+					  </div>
+					  <div class="mobile-menu">
+					    <button class="hamburger"><i class="fas fa-bars"></i></button>
+					  </div>
+					</header>
 		
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
@@ -281,7 +281,7 @@
 				<!-- Footer -->
 					<footer class="minimalist-footer">
 					  <img src="images/lazi-voyage/logo-lazi-update.png" alt="Lazi Voyage" class="footer-logo">
-					  <p>Khám phá vẻ đẹp văn hóa Việt</p>
+					  <p>Blog văn hóa Việt</p>
 					  
 					  <div class="social-circle">
 					    <a href="#"><i class="fab fa-instagram"></i></a>
@@ -289,7 +289,7 @@
 					    <a href="#"><i class="fab fa-youtube"></i></a>
 					  </div>
 					  
-					  <div class="copyright">© 2023 Lazi Voyage</div>
+					  <div class="copyright">© 2023 Lazi Voyage | All Rights Reserved</div>
 					</footer>
 			</div>
 
@@ -304,4 +304,5 @@
 
 	</body>
 </html>
+
 
