--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+		<!-- GSC lazivoyage.netlify.app -->
+		<meta name="google-site-verification" content="9bHvrkrhUepII74YkTKqknmoWnGsNtwpUPhlwcsk42A" />
+		<!-- GSC lazivoyage.com -->
+		
 	</head>
 	<body class="is-preload">
 
@@ -304,5 +309,6 @@
 
 	</body>
 </html>
+
 
 
