--- a/index.html
+++ b/index.html
@@ -33,13 +33,18 @@
 					      <li><a href="#culture">Văn Hoá</a></li>
 					    </ul>
 					  </nav>
-					  <div class="search-bar">
-					    <input type="text" placeholder="Tìm kiếm...">
-					    <button><i class="fas fa-search"></i></button>
-					  </div>
-					  <div class="mobile-menu">
-					    <button class="hamburger"><i class="fas fa-bars"></i></button>
-					  </div>
+					<div class="search-bar">
+					  <input type="text" placeholder="Tìm kiếm..." aria-label="Search">
+					  <button type="submit" aria-label="Search button">
+					    <i class="fas fa-search"></i>
+					  </button>
+					</div>
+					
+					<div class="mobile-menu">
+					  <button class="hamburger" aria-label="Menu">
+					    <i class="fas fa-bars"></i>
+					  </button>
+					</div>
 					</header>
 		
 		<!-- Wrapper -->
@@ -309,6 +314,7 @@
 
 	</body>
 </html>
+
 
 
 
