--- a/index.html
+++ b/index.html
@@ -41,9 +41,15 @@
 					</div>
 					
 					<div class="mobile-menu">
-					  <button class="hamburger" aria-label="Menu">
-					    <i class="fas fa-bars"></i>
-					  </button>
+					  <button class="hamburger"><i class="fas fa-bars"></i></button>
+					  <div class="mobile-menu-content">
+					    <ul>
+					      <li><a href="/">Home</a></li>
+					      <li><a href="#lang">Ngôn Ngữ</a></li>
+					      <li><a href="#tour">Tour</a></li>
+					      <li><a href="#culture">Văn Hoá</a></li>
+					    </ul>
+					  </div>
 					</div>
 					</header>
 		
@@ -314,6 +320,7 @@
 
 	</body>
 </html>
+
 
 
 
