--- a/index.html
+++ b/index.html
@@ -33,18 +33,25 @@
 					      <li><a href="#culture">Văn Hoá</a></li>
 					    </ul>
 					  </nav>
-					<div class="search-bar">
-					  <input type="text" placeholder="Tìm kiếm..." aria-label="Search">
-					  <button type="submit" aria-label="Search button">
-					    <i class="fas fa-search"></i>
-					  </button>
-					</div>
-					
-					<div class="mobile-menu">
-					  <button class="hamburger" aria-label="Menu">
-					    <i class="fas fa-bars"></i>
-					  </button>
-					</div>
+					  <div class="search-bar">
+					    <input type="text" placeholder="Tìm kiếm..." aria-label="Search">
+					    <button type="submit" aria-label="Search button">
+					      <i class="fas fa-search"></i>
+					    </button>
+					  </div>
+					  <div class="mobile-menu">
+					    <button class="hamburger" aria-label="Menu">
+					      <i class="fas fa-bars"></i>
+					    </button>
+					  </div>
+					  <div class="mobile-menu-content">
+					    <ul>
+					      <li><a href="/">Home</a></li>
+					      <li><a href="#lang">Ngôn Ngữ</a></li>
+					      <li><a href="#tour">Tour</a></li>
+					      <li><a href="#culture">Văn Hoá</a></li>
+					    </ul>
+					  </div>
 					</header>
 		
 		<!-- Wrapper -->
@@ -314,4 +321,5 @@
 
 	</body>
 </html>
+
 
