--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
 					      <li><a href="#culture">Văn Hoá</a></li>
 					    </ul>
 					  </nav>
-					  <div class="search-bar">
-					    <input type="text" placeholder="Tìm kiếm..." aria-label="Search">
-					    <button type="submit" aria-label="Search button">
-					      <i class="fas fa-search"></i>
-					    </button>
+					  <div class="search-bar-container">
+					    <div class="search-bar">
+					      <input type="text" placeholder="Tìm kiếm..." aria-label="Search">
+					      <button type="submit" aria-label="Search button">
+					        <i class="fas fa-search"></i>
+					      </button>
+					    </div>
 					  </div>
 					  <div class="mobile-menu">
 					    <button class="hamburger" aria-label="Menu">
@@ -321,6 +323,7 @@
 
 	</body>
 </html>
+
 
 
 
