--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 					    <ul>
 					      <li><a href="/">Home</a></li>
 					      <li><a href="#lang">Ngôn Ngữ</a></li>
-					      <li><a href="#tour">Tour</a></li>
+					      <li><a href="#map">Bản Đồ</a></li>
 					      <li><a href="#culture">Văn Hoá</a></li>
+						  <li><a href="#contact">Liên Hệ</a></li>
 					    </ul>
 					  </nav>
 					  <div class="search-bar-container">
@@ -50,8 +51,9 @@
 					    <ul>
 					      <li><a href="/">Home</a></li>
 					      <li><a href="#lang">Ngôn Ngữ</a></li>
-					      <li><a href="#tour">Tour</a></li>
+					      <li><a href="#map">Bản Đồ</a></li>
 					      <li><a href="#culture">Văn Hoá</a></li>
+						  <li><a href="#contact">Liên Hệ</a></li>
 					    </ul>
 					  </div>
 					</header>
@@ -148,17 +150,17 @@
 							</ul>
 					</section>
 
-				<!-- Tour Vietnam -->
+				<!-- Vietnam Map -->
 					<section class="spotlight style5 orient-left content-align-left image-position-center onscroll-image-fade-in">
-						<div class="content" id="tour">
-							<h2>Tour Xuyên Việt</h2>
+						<div class="content" id="map">
+							<h2>Bản Đồ Du Lịch Việt Nam</h2>
 							<p style="text-align: justify;">Việc rút gọn bộ máy hành chính từ 63 xuống 34 tỉnh thành đã khiến việc du lịch xuyên Việt trở nên dễ dàng hơn bao giờ hết. Bạn đã sẵn sàng cho tour xuyên việt chưa?</p>
 							<ul class="actions stacked">
 								<li><a href="#banner" class="button smooth-scroll-middle">Xem thêm</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/lazi-voyage/banner-rong-thoi-ly.jpg" alt="Tour xuyên việt" />
+							<img src="images/lazi-voyage/banner-rong-thoi-ly.jpg" alt="Bản đồ du lịch Việt Nam" />
 						</div>
 					</section>
 				
@@ -323,6 +325,7 @@
 
 	</body>
 </html>
+
 
 
 
