--- a/index.html
+++ b/index.html
@@ -305,9 +305,11 @@
 					  <p>Blog văn hóa Việt</p>
 					  
 					  <div class="social-circle">
-					    <a href="#"><i class="fab fa-instagram"></i></a>
-					    <a href="#"><i class="fab fa-pinterest"></i></a>
-					    <a href="#"><i class="fab fa-youtube"></i></a>
+					    <a href="https://instagram.com/josvu19"><i class="fab fa-instagram"></i></a>
+						<a href="https://facebook.com/josvu19"><i class="fab fa-facebook"></i></a>
+					    <a href="https://fr.pinterest.com/goavecjo/"><i class="fab fa-pinterest"></i></a>
+					    <a href="https://x.com/guidefrvietnam"><i class="fab fa-twitter"></i></a>
+						<a href="https://www.linkedin.com/in/guidefrancophonevietnam/"><i class="fab fa-linkedin"></i></a>
 					  </div>
 					  
 					  <div class="copyright">© 2023 Lazi Voyage | All Rights Reserved</div>
@@ -325,6 +327,7 @@
 
 	</body>
 </html>
+
 
 
 
