--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							<div class="gallery style1 small onscroll-fade-in">
 								<article>
 										<div class="image">
-										<img src="images/pic01.jpg" alt="Ngôn ngữ Việt Nam" />
+										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-3.jpg" alt="Ngôn ngữ Việt Nam" />
 										</div>
 									<div class="caption">
 										<h3>Người bắc chơi chữ</h3>
@@ -98,7 +98,7 @@
 								</article>
 								<article>
 									<div class="image">
-										<img src="images/pic01.jpg" alt="Ngôn ngữ Việt Nam" />
+										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-1.jpg" alt="Ngôn ngữ Việt Nam" />
 									</div>
 									<div class="caption">
 										<h3>Người bắc chơi chữ</h3>
@@ -110,11 +110,11 @@
 								</article>
 								<article>
 									<div class="image">
-										<img src="images/pic01.jpg" alt="Ngôn ngữ Việt Nam" />
+										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-2.jpg" alt="Ngôn ngữ Việt Nam" />
 									</div>
 									<div class="caption">
 										<h3>Người bắc chơi chữ</h3>
-										<p>Mồm</p>
+										<p>Đừng có xới 1 môi</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Chi tiết</span></li>
 										</ul>
@@ -122,7 +122,7 @@
 								</article>
 								<article>
 									<div class="image">
-										<img src="images/pic01.jpg" alt="Ngôn ngữ Việt Nam" />
+										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-4.jpg" alt="Ngôn ngữ Việt Nam" />
 									</div>
 									<div class="caption">
 										<h3>Phương ngữ miền nam</h3>
@@ -134,7 +134,7 @@
 								</article>
 								<article>
 									<div class="image">
-										<img src="images/pic01.jpg" alt="Ngôn ngữ Việt Nam" />
+										<img src="images/lazi-voyage/vuon-ngon-ngu-viet/phuong-ngu-vietnam-5.jpg" alt="Ngôn ngữ Việt Nam" />
 									</div>
 									<div class="caption">
 										<h3>Phương ngữ miền tây</h3>
@@ -327,6 +327,7 @@
 
 	</body>
 </html>
+
 
 
 
