--- a/index.html
+++ b/index.html
@@ -325,9 +325,8 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script src="url-data.js"></script>
-			<script src="search-logic.js"></script>
-
+			<script src="search.js"></script>
 
 	</body>
 </html>
+
