--- a/index.html
+++ b/index.html
@@ -325,8 +325,9 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script src="search.js"></script>
+			<script src="assets/js/search.js"></script>
 
 	</body>
 </html>
+
 
