--- a/search.html
+++ b/search.html
@@ -60,7 +60,7 @@
                 <div class="inner">
                     <h2>Kết Quả Tìm Kiếm</h2>
                     <p>Kết quả tìm kiếm cho từ khóa: <strong id="searchQuery"></strong></p>
-                    <div id="search-results" class="gallery style1 medium onscroll-fade-in"></div>
+                    <div id="search-results"></div> <!-- Loại bỏ class gallery -->
                 </div>
             </section>
 
