--- a/search.html
+++ b/search.html
@@ -67,7 +67,7 @@
             <!-- Footer -->
             <footer class="minimalist-footer">
                 <img src="images/lazi-voyage/logo-lazi-update.png" alt="Lazi Voyage" class="footer-logo">
-                <p>Blog văn hóa Việt</p>
+                <p><a href="https://linktr.ee/guidefrancophonevietnam"  target="_blank">Blog văn hóa Việt</a></p>
                 <div class="social-circle">
                     <a href="https://instagram.com/josvu19"><i class="fab fa-instagram"></i></a>
                     <a href="https://facebook.com/josvu19"><i class="fab fa-facebook"></i></a>
