--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 				<!-- Footer -->
 					<footer class="minimalist-footer">
 					  <img src="images/lazi-voyage/logo-lazi-update.png" alt="Lazi Voyage" class="footer-logo">
-					  <p>Blog văn hóa Việt</p>
+					  <p><a href="https://linktr.ee/guidefrancophonevietnam"  target="_blank">Blog văn hóa Việt</a></p>
 					  
 					  <div class="social-circle">
 					    <a href="https://instagram.com/josvu19"><i class="fab fa-instagram"></i></a>
@@ -329,5 +329,6 @@
 
 	</body>
 </html>
+
 
 
