--- a/index.html
+++ b/index.html
@@ -293,6 +293,10 @@
 								            <label for="email">Email</label>
 								            <input type="email" name="email" id="email" required />
 								        </div>
+										<div class="field half">
+										    <label for="phone">Số điện thoại</label>
+										    <input type="tel" name="phone" id="phone" pattern="[0-9]{10,15}" placeholder="VD: 0912345678" />
+										</div>
 								        <div class="field">
 								            <label for="message">Nội dung</label>
 								            <textarea name="message" id="message" rows="6" required></textarea>
@@ -335,3 +339,4 @@
 
 	</body>
 </html>
+
