--- a/index.html
+++ b/index.html
@@ -285,17 +285,17 @@
 								    <input type="hidden" name="form-name" value="contact">
 								
 								    <div class="fields">
-								        <div class="field half">
+								        <div class="field third">
 								            <label for="name">Tên</label>
-								            <input type="text" name="name" id="name" required />
+								            <input type="text" name="name" id="name" required placeholder="VD: Nguyen Van A" />
 								        </div>
-								        <div class="field half">
+								        <div class="field third">
 								            <label for="email">Email</label>
-								            <input type="email" name="email" id="email" required />
+								            <input type="email" name="email" id="email" required placeholder="VD: mailcuaban@gmail.com" />
 								        </div>
-										<div class="field half">
+										<div class="field third">
 										    <label for="phone">Số điện thoại</label>
-										    <input type="tel" name="phone" id="phone" pattern="[0-9]{10,15}" placeholder="VD: 0912345678" />
+										    <input type="tel" name="phone" id="phone" pattern="[0-9]{10,15}" required placeholder="VD: 0912345678" />
 										</div>
 								        <div class="field">
 								            <label for="message">Nội dung</label>
@@ -339,4 +339,5 @@
 
 	</body>
 </html>
+
 
